--- a/css/styles.scss
+++ b/css/styles.scss
@@ -23,7 +23,9 @@
 @import './Components/_components.fibonacci';
 @import './Components/_components.table';
 @import './Components/_components.figures-form';
+@import './Components/_components.distance-calculator';
 @import './Components/_components.currency';
+
 
 
 
