--- a/css/Components/_components.code-container.scss
+++ b/css/Components/_components.code-container.scss
@@ -15,7 +15,7 @@
 
 .code-csharp > pre {
     width: 100% !important;
-    font-size: 14px !important;
+    font-size: 14px;
     color: $third-color-blue !important;
     background: linear-gradient(2deg, rgba(91,98,104,0.08) 100%, rgba(213,248,255,1) 100%) !important;
     border-radius: 5px;
