--- a/css/Elements/_elements.input.scss
+++ b/css/Elements/_elements.input.scss
@@ -14,7 +14,14 @@ input[type="search"]:focus,
 input[type="tel"]:focus,
 input[type="color"]:focus,
 .uneditable-input:focus {   
-  border: 1px solid $primary-color-blue;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(62,147,255, 0.25);
-  outline: 0 none;
+  @include input-select-focus;
+}
+
+select:focus {
+  @include input-select-focus;
+}
+
+option {
+  outline: 0 none !important;
+  border: 1px solid #3498DB !important;
 }
