--- a/css/styles.css
+++ b/css/styles.css
@@ -409,6 +409,7 @@ body hr {
 }
 
 .container-fluid {
+  opacity: 0;
   width: 100%;
   height: 100%;
   display: flex;
@@ -417,9 +418,8 @@ body hr {
   background-color: transparent;
   margin: 0;
   padding: 0;
-  opacity: 0;
-  -webkit-animation: fadeIn 1.5s forwards;
-          animation: fadeIn 1.5s forwards;
+  -webkit-animation: fadeIn 1.6s forwards;
+          animation: fadeIn 1.6s forwards;
 }
 
 .header-container {
@@ -573,6 +573,11 @@ body hr {
   color: whitesmoke !important;
 }
 
+.fa-angle-down {
+  color: whitesmoke;
+  padding-left: 5px;
+}
+
 .e-header {
   font-size: 24px;
   text-transform: uppercase;
@@ -679,6 +684,31 @@ body hr {
   font-weight: 100;
 }
 
+.e-form {
+  display: block;
+  margin: 5% 0;
+  border-radius: 5px;
+  background-color: whitesmoke;
+  box-shadow: 0px 10px 13px -7px rgba(0, 0, 0, 0.48), 0px 0px 20px 7px rgba(0, 0, 0, 0.2);
+}
+.e-form-title {
+  text-transform: capitalize;
+  font-size: 26px;
+  font-weight: 100;
+}
+.e-form > h3 {
+  background-color: #3498DB;
+  padding: 3%;
+  color: whitesmoke;
+  text-align: center;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.form-inner-container {
+  padding: 15px;
+}
+
 #input-number:focus {
   border-color: rgb(62, 147, 255) !important;
   outline: none !important;
@@ -710,9 +740,20 @@ input[type=search]:focus,
 input[type=tel]:focus,
 input[type=color]:focus,
 .uneditable-input:focus {
-  border: 1px solid rgb(62, 147, 255);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(62, 147, 255, 0.25);
-  outline: 0 none;
+  outline: 0 none !important;
+  border-color: #3498DB !important;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.095) inset, 0 0 8px rgba(77, 147, 217, 0.45) !important;
+}
+
+select:focus {
+  outline: 0 none !important;
+  border-color: #3498DB !important;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.095) inset, 0 0 8px rgba(77, 147, 217, 0.45) !important;
+}
+
+option {
+  outline: 0 none !important;
+  border: 1px solid #3498DB !important;
 }
 
 #ss:focus,
@@ -743,6 +784,47 @@ select:focus,
   transition: all 0.5s ease-in-out;
 }
 .e-button:hover {
+  background-color: #757575;
+}
+
+.e-button-math {
+  cursor: pointer;
+  position: relative;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: block;
+  padding: 3px 20px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border: none;
+  color: whitesmoke !important;
+  overflow: hidden;
+  box-shadow: 0px 5px 13px -7px #000000, 1px 0px 30px -14px rgba(0, 0, 0, 0);
+  overflow: hidden !important;
+  background-color: #3498DB;
+  transition: all 0.5s ease-in-out;
+}
+.e-button-math:hover {
+  background-color: #2E86C1;
+}
+
+.e-button-math-default {
+  cursor: pointer;
+  position: relative;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: block;
+  padding: 7px 20px;
+  border-radius: 5px;
+  border: none;
+  color: whitesmoke !important;
+  overflow: hidden;
+  box-shadow: 0px 5px 13px -7px #000000, 1px 0px 30px -14px rgba(0, 0, 0, 0);
+  overflow: hidden !important;
+  background-color: #626567;
+  transition: all 0.5s ease-in-out;
+}
+.e-button-math-default:hover {
   background-color: #757575;
 }
 
@@ -1055,7 +1137,7 @@ section > h5, section > div, section > p {
 
 .code-csharp > pre {
   width: 100% !important;
-  font-size: 14px !important;
+  font-size: 14px;
   color: #2A5699 !important;
   background: linear-gradient(2deg, rgba(91, 98, 104, 0.08) 100%, rgb(213, 248, 255) 100%) !important;
   border-radius: 5px;
@@ -1141,7 +1223,8 @@ section > h5, section > div, section > p {
 
 .code-factorial > pre {
   max-width: 400px !important;
-  font-size: 14px !important;
+  max-width: 400px;
+  font-size: 14px;
   color: #2A5699 !important;
   background: linear-gradient(2deg, rgba(91, 98, 104, 0.08) 100%, rgb(213, 248, 255) 100%) !important;
   border-radius: 5px;
@@ -1165,6 +1248,12 @@ section > h5, section > div, section > p {
   display: none;
 }
 
+.input-factorial-number:focus {
+  outline: 0 none !important;
+  border-color: #3498DB !important;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.095) inset, 0 0 8px rgba(77, 147, 217, 0.45) !important;
+}
+
 .fibonacci-container {
   max-width: 100%;
 }
@@ -1185,14 +1274,20 @@ section > h5, section > div, section > p {
 }
 
 .code-fibonacci > pre {
-  max-width: 400px !important;
-  font-size: 14px !important;
+  max-width: 400px;
+  font-size: 14px;
   color: #2A5699 !important;
   background: linear-gradient(2deg, rgba(91, 98, 104, 0.08) 100%, rgb(213, 248, 255) 100%) !important;
   border-radius: 5px;
   padding: 5px;
   overflow: auto;
   box-shadow: 0px 5px 13px -7px #000000, 1px 0px 30px -14px rgba(0, 0, 0, 0);
+}
+
+.input-fibonacci-number:focus {
+  outline: 0 none !important;
+  border-color: #3498DB !important;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.095) inset, 0 0 8px rgba(77, 147, 217, 0.45) !important;
 }
 
 .table-bordered {
@@ -1219,7 +1314,6 @@ section > h5, section > div, section > p {
 
 .container-form-figures {
   max-width: 500px;
-  min-height: 600px;
   margin-right: auto;
 }
 @media screen and (max-width: 599px) {
@@ -1236,6 +1330,11 @@ section > h5, section > div, section > p {
   .container-form-figures {
     padding-left: 3%;
   }
+}
+.container-form-figures input[type=text]:focus {
+  outline: 0 none !important;
+  border-color: #3498DB !important;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.095) inset, 0 0 8px rgba(77, 147, 217, 0.45) !important;
 }
 
 .form {
@@ -1262,6 +1361,54 @@ section > h5, section > div, section > p {
 .triangle-area-herons-formula,
 .triangle-area-with-angle-formula {
   display: none;
+}
+
+@media screen and (max-width: 599px) {
+  .distance-container {
+    padding-left: 0%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .distance-container {
+    padding-left: 1%;
+  }
+}
+@media screen and (min-width: 900px) {
+  .distance-container {
+    padding-left: 3%;
+  }
+}
+
+.distance-calculator-container {
+  width: 450px;
+}
+
+.input-distance-converter {
+  width: 15% !important;
+}
+
+.input-distance-converter-result {
+  width: 41% !important;
+}
+
+.label-distance-to {
+  padding-right: 26%;
+}
+
+.btn-distance-converter-disabled {
+  visibility: hidden;
+}
+
+.code-distance-converter-calculator > pre {
+  max-width: 400px;
+  font-size: 14px;
+  color: #2A5699 !important;
+  background: linear-gradient(2deg, rgba(91, 98, 104, 0.08) 100%, rgb(213, 248, 255) 100%) !important;
+  border-radius: 5px;
+  padding: 5px;
+  overflow: auto;
+  box-shadow: 0px 5px 13px -7px #000000, 1px 0px 30px -14px rgba(0, 0, 0, 0);
+  font-size: 10px;
 }
 
 .container-currency {
