--- a/css/styles.scss
+++ b/css/styles.scss
@@ -18,6 +18,7 @@
 
 @import './Objects/_objects.description-numbers';
 
+@import './Components/_components.under-navigation';
 @import './Components/_components.code-container';
 @import './Components/_components.factorial';
 @import './Components/_components.fibonacci';
