--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,6 +26,7 @@
 @import './Components/_components.figures-form';
 @import './Components/_components.distance-calculator';
 @import './Components/_components.currency';
+@import './Components/components.toastr';
 
 
 
