--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -31,6 +31,7 @@
 @import './Components/_components-distance-points';
 @import './Components/_components.toastr';
 @import './Components/_components-carousel';
+@import './Components/_components-mocha-test';
 
 
 
