--- a/public/css/Settings/_settings.colors.scss
+++ b/public/css/Settings/_settings.colors.scss
@@ -2,6 +2,10 @@
 $primary-color-blue: rgb(62,147,255,1);
 $secondary-color-blue: #3573CA;
 $third-color-blue: #2A5699;
+$error-color: rgb(249,38,16);
+$accept-color: #3498DB;;
 
 /* background colors */
 $background-color-blue: #59adc2;
+
+
