--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -17,6 +17,7 @@
 @import './Elements/_elements.footer';
 @import './Elements/_elements.code';
 @import './Elements/_elements.image';
+@import './Elements/_elements.span';
 
 @import './Objects/_objects.description-numbers';
 
